# wifi-voice-clock

circuit/: fp-lib-table  sym-lib-table  wifi_voice_clock-v3.kicad_pcb  wifi_voice_clock-v3.sch  wifi_voice_clock.lib
circuit/wifi_voice_clock.3dshapes/: Jumper_2.40mm.fcstd  Jumper_2.40mm.step  Jumper_2.40mm.wrl  OLED0.96.fcstd  OLED0.96.step  OLED0.96.wrl  THAU13.fcstd  THAU13.step  THAU13.wrl  TVDT18-050CW-T.step  TVDT18-050CW-T.wrl
circuit/wifi_voice_clock.pretty/: LM561B.kicad_mod  OLED0.96.kicad_mod  PinHeader_1x10_P2.54mm_3mm_Horizontal_SMD.kicad_mod  PinSocket_1x06_P2.54mm_5.7mm_Horizontal_SMD.kicad_mod  PinSocket_1x08_P2.54mm_5.7mm_Horizontal_SMD.kicad_mod  PinSocket_1x08_P2.54mm_8.5mm_Horizontal_SMD.kicad_mod  PinSocket_1x10_P2.54mm_3.5mm_Horizontal_SMD.kicad_mod  PinSocket_1x10_P2.54mm_5.7mm_Horizontal_SMD.kicad_mod  THAU13.kicad_mod  USB_Mini-B_Hirose_UX60SC-MB-5ST.kicad_mod  esp32_anntena_hole.kicad_mod
docs/: hackaday.txt
prog/: .gitignore  CMakeLists.txt  Makefile  README.md  gen.make  partitions.csv  sdkconfig.defaults
prog/components/audio/: CMakeLists.txt  audio.c  component.mk  riffwave.c
prog/components/clock/: CMakeLists.txt  clock.c  clock_debug.c  clock_internal.h  clock_sntp.c  component.mk
prog/components/gfx/: CMakeLists.txt  component.mk  gfx.c  gfx_bitmap.c  gfx_primitive.c  gfx_text.c  gfx_thick_line.c  gfx_tinyfont.c  lcd_1bit_vert.c  lcd_generic.c  trace.h
prog/components/http_alarm_conf/: CMakeLists.txt  alarm.c  component.mk  http_alarm_conf.c
prog/components/http_clock_conf/: CMakeLists.txt  clock_conf.c  component.mk  http_clock_conf.c  internal.h
prog/components/http_firmware/: CMakeLists.txt  component.mk  http_firmware.c  ota_helper.c  spiffs_upd.c  spiffs_upd.h
prog/components/http_html_cmn/: CMakeLists.txt  component.mk  http_html_cmn.c  queryparser.c  queryparser.h
prog/components/http_wifi_conf/: CMakeLists.txt  component.mk  http_wifi_conf.c  wifi_conf.c
prog/components/vcc/: Kconfig  (+3 more)
prog/main/: CMakeLists.txt  Kconfig.projbuild  Makefile.projbuild  app_clock.c  app_clock.h  app_display_clock.c  app_display_clock.h  app_display_softap.c  app_display_softap.h  app_main.c  app_mode.h  app_mode_clock.c  app_mode_initial.c  app_mode_initialsync.c  app_mode_menu.c  app_mode_settings.c  app_mode_suspend.c  app_switches.c  app_switches.h  component.mk  lang.txt  misc.c  misc.h  voice.c  voice.h
prog/main/bitmaps/: batt.bmp.h
prog/main/html/: index.html  test-html.pl
prog/main/lib/: liblistview.c  liblistview.h  libmenu.c  libmenu.h
prog/main/menu/: menu.h  menu_main.c
prog/main/util/: app_clock.c  app_clock.h  app_display.c  app_display.h  app_event.c  app_event.h  app_switches.c  app_switches.h  app_wifi.c  app_wifi.h  power.c  power.h  sound.c  sound.h  storage.c  storage.h
prog/tools/: time_vo.pl  time_vo.txt.example
(+78 files in other folders)
